JavaFx V1
- Add employee works
- Update Salary works
- Search Employee opens then errors on search
- Report does not open yet